Refactor propagated contingency (#888)
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@gmail.com>